ZOOM-C reads option extraArgs. If set the value of extraArgs is appended to
SRU URI (POST/GET). Value is _raw_ URI part, such as x-id-a=v1&x-id-b=v2 .

--- 2.1.26 2006/08/15

Fixed problem with SRU mode type (soap, get, post) for yaz-client
and ZOOM-C.

Fixed problem another problem with ZOOM_EVENT_RECV_RECORD . Bug #626.

--- 2.1.24 2006/08/08

Fixed MARC ISO2709 encoding routines to deal with character set 
conversion.

Minor changes to GFS logging. Database included in search request log
line.

Fixes for ZOOM-C: event ZOOM_EVENT_RECV_RECORD was not generated for
cached/multiple records.

Shared libraries are built by default on Unix+configure.

Changed cql2pqf transformation to use a different evaluation order. The
new order is: always, relation, structure, position, truncation, index
and relationModifier. Old order was: always, relation, relationModifier,
structure, index, position, truncation. Note that the the latter ones
override former ones for identical attributes.. The new scheme means that
it is possible to override any existing attribute with a relationModifier.
And also that it is possible to override everything for the index rule
(except the ones listed in relationModifier). No order is perfect but this
one, we believe, covers more real cases.. The "always" should have been
called "default", since the attributes there can be overridden with all
the rest.

For Libxml2 and friends, YAZ defines YAZ_HAVE_{XML2,XSLT,EXSLT) in the
compilation phase, but also for yaz-config --cflags output. This allows
us to have public headers with Libxml2 stuff in them . It should also,
eventually, make Libxml2 checks redundant in packages using YAZ, such
as yazproxy.

--- 2.1.22 2006/06/15

Changed SRU update structure bend_update_rr so that SRU diagnostics are
stored in uri, message and details.. Previously diagnostics were stored
in errcode, errstring. Patch by Ko van der Sloot. Breaks binary
compatibility.. but he's probably the only one affected, so.
